Closed Bug 501241 Opened 17 years ago Closed 17 years ago

xpcshell fails to build when setting EDITLINE

Categories

(Core :: XPConnect, defect)

1.9.1 Branch
All
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: glandium, Assigned: glandium)

Details

(Whiteboard: fixed-in-tracemonkey)

Attachments

(1 file)

Attached patch patchSplinter Review
The definitions for readline and add_history are now too far in the file compared to their use. The code must have moved without the function definitions.
Attachment #385885 - Flags: review?(shaver)
Attachment #385885 - Flags: review?(shaver) → review+
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Assignee: nobody → mh+mozilla
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: