Fix FTBFS of xpcshell when EDITLINE is set

https://bugzilla.mozilla.org/show_bug.cgi?id=501241