js/src/xpconnect/shell/xpcshell.cpp
@@ -224,6 +224,13 @@ GetLocationProperty(JSContext *cx, JSObject *obj, jsval id, jsval *vp)
 #endif
 }
 
+#ifdef EDITLINE
+extern "C" {
+extern JS_EXPORT_API(char)     *readline(const char *prompt);
+extern JS_EXPORT_API(void)     add_history(char *line);
+}
+#endif
+
 static JSBool
 GetLine(JSContext *cx, char *bufp, FILE *file, const char *prompt) {
 #ifdef EDITLINE
@@ -810,13 +817,6 @@ my_GetErrorMessage(void *userRef, const char *locale, const uintN errorNumber)
         else
             return NULL;
 }
-
-#ifdef EDITLINE
-extern "C" {
-extern JS_EXPORT_API(char)     *readline(const char *prompt);
-extern JS_EXPORT_API(void)     add_history(char *line);
-}
-#endif
 
 static void
 ProcessFile(JSContext *cx, JSObject *obj, const char *filename, FILE *file,
